Allow assignment of a QML Locale object to a C++ QLocale property.

Task-number: QTBUG-36125

Change-Id: I58454db0c47684aed3e95c52a8135fd5fd6bf2f9
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>